src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

html {
  /* background-color: #1C1C1C; */
  background-image: url('/images/bg.jpg');
  background-size: cover;
  min-height: 100vh;
}

body {
  font-family: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  margin: auto;
  padding: 20px;
  max-width: 65ch;
  text-align: left;
  /* background-color: #1C1C1C; */
  /* background: linear-gradient(360deg, #1C1C1C 10%, #494949 360%); */
  word-wrap: break-word;
  overflow-wrap: break-word;
  line-height: 1.5;
  color: #fff;
}

h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
  color: #fff;
}

a {
  color: #bad5ff;
  font-weight: bold;
}

nav a {
  margin: 0 10px;
}

em {
  display: block;
}

textarea {
  width: 100%;
  font-size: 16px;
}

input {
  font-size: 16px;
}

content {
  line-height: 1.6;
}

table {
  width: 100%;
}

img {
  max-width: 100%;
  height: auto;
}

code {
  padding: 2px 5px;
  background-color: #f2f2f2;
}

pre {
  padding: 1rem;
}

pre>code {
  all: unset;
}

blockquote {
  border: 1px solid #999;
  color: #222;
  padding: 2px 0px 2px 20px;
  margin: 0px;
  font-style: italic;
}

li {
  margin: 20px 0;
}

